--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -121,7 +121,7 @@ jQuery(document).ready(function() {
                 }
                 selector += '</select>';
                 $(this).append(selector);
-                if (name.indexOf('application_') === 0 && $(this).prev().children('input') && $(this).prev().children('input').first().attr('name').indexOf('application_') === 0) {
+                if (name.indexOf('application_') === 0 && $(this).prev().children('select').length && $(this).prev().children('select').first().attr('name').indexOf('application_') === 0) {
                     $(this).prev().children('input').first().trigger('change');
                 }
             }
