--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -121,7 +121,7 @@ jQuery(document).ready(function() {
                 }
                 selector += '</select>';
                 $(this).append(selector);
-                if (name.indexOf('application_') === 0)
+                if (name.indexOf('application_') === 0) {
                     var nb = name.replace('application_','');
                     if (nb === 'institution') $(this).children('.institutionselector').bind('change', limitsubjects);
                     if (nb === 'subject') $(this).children('.subjectselector').bind('change', limitlevels);
