--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -173,6 +173,7 @@ jQuery(document).ready(function() {
     var limitlevels = function(event) {
         var ls = $(this).closest('tr').find('.levelselector');
         var sv = ls.attr('sv');
+        if (sv) $(this).removeAttr('sv');
         ls.attr("disabled","disabled");
         var level = $('option:selected', this).attr('data-level');
         if ( level ) {
@@ -217,6 +218,7 @@ jQuery(document).ready(function() {
                 obj:$(this),
                 success: function(data) {
                     var sv = this.obj.closest('tr').find('.subjectselector').attr('sv');
+                    if (sv) this.obj.closest('tr').find('.subjectselector').removeAttr('sv');
                     if ( data.hits.total == 0 ) {
                         var subjects = {{ selections.advancedsubjects|tojson|safe }};
                     } else if ( data.hits.hits[0]._source.subjects !== undefined && data.hits.hits[0]._source.subjects.length > 0 ) {
@@ -233,7 +235,7 @@ jQuery(document).ready(function() {
                         } else {
                             opts += "<option";
                             subjects[i].level !== undefined ? opts += ' data-level="' + subjects[i].level + '"' : false;
-                            if (sv && sv === subjects[i]) opts += ' selected="selected"';
+                            if (sv && sv === subjects[i].name) opts += ' selected="selected"';
                             opts += ">" + subjects[i].name + "</option>";
                         }
                     }
