--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -234,7 +234,7 @@ jQuery(document).ready(function() {
                         } else {
                             opts += "<option";
                             subjects[i].level !== undefined ? opts += ' data-level="' + subjects[i].level + '"' : false;
-                            if (sv === subjects[i].name) opts += ' selected="selected"';
+                            if (this.sv === subjects[i].name) opts += ' selected="selected"';
                             opts += ">" + subjects[i].name + "</option>";
                         }
                     }
