--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -78,7 +78,7 @@ jQuery(document).ready(function() {
 			}
 		{% endif %}
         adder += '<a class="btn edit-row" style="margin:-10px 2px 0 0;';
-        if ( !$(this).parents('table').hasClass('editablerows') ) { adder += 'visibility:hidden;'; }
+        if ( $(this).parents('tr').hasClass('editablerows') || !$(this).parents('table').hasClass('editablerows') ) { adder += 'visibility:hidden;'; }
         adder += '" href="#">edit</a>';
         $(this).children('td').first().prepend(adder).children('select, input').addClass('narrow');
     });
@@ -774,7 +774,11 @@ fieldset{
                 <tbody>
                     {% if record %}
                         {% for app in record.data.applications %}
+                		{% if app['pae_requested'] %}
                     <tr>
+                        {% else %}
+                    <tr class="noedit">
+                        {% endif %}
                 		<td><input class="noclone" type="hidden" name="application_institution" value="{% if app.institution %}{{app.institution}}{% endif %}"><input type="text" disabled="disabled" value="{{app.institution}}" style="width:170px;"></td>
                 		<td><input class="noclone" type="hidden" name="application_subject" value="{% if app.subject %}{{app.subject}}{% endif %}"><input type="text" disabled="disabled" value="{{app.subject}}" style="width:170px;"></td>
                 		<td>
