--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -2,31 +2,29 @@
 
 {% block content %}
 
-    <div id="logo">
-		<img src="/static/leaps_people.jpg" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
+  <div id="logo">
+		<img src="/static/leaps_banner.png" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
 	</div>
 
-      <div class="row-fluid">
-        <div class="span8">
-	        <h2>Lothians Equal Access Programme for Schools</h2>
-	
-	        <p>We support talented young people in South East Scotland providing them with information and encouragement to apply to higher education. We work with schools in the region, targeting young people with little or no family experience of higher education or those who may have experienced adverse social and/or economic circumstances.</p>
-	
-	        <p>Support for the UCAS process begins with eligible students completing our <a class="inline" href="/survey">online survey form</a>. 
-	        Providing as much detail as possible at this stage increases the benefit of any forthcoming face to 
-	        face interview. To find out more about what your LEAPS interview will involve, have a look at the 
-	        <a href=" https://leapsonline.org/schoolstudents/s6-blog/leaps-11-interview">LEAPS S6 - Blog</a></p>
-	        
-	        <p>All data is collected and stored securely, and used only in accordance with our 
-	        <a class="inline" href="/policy">data policy</a>.</p>
-        </div>
+  <div class="row-fluid">
+    <div class="span8">
+      <h2>Lothians Equal Access Programme for Schools</h2>
 
-        <div class="span4">
-            <div class="hero-unit">
-        		<a class="btn btn-primary" href="/survey">start the survey form</a>
-            </div>
-        </div>
+      <p>We support talented young people in South East Scotland providing them with information and encouragement to apply to higher education. We work with schools in the region, targeting young people with little or no family experience of higher education or those who may have experienced adverse social and/or economic circumstances.</p>
 
-      </div>
+      <p>Support for the UCAS process begins with eligible students completing our <a class="inline" href="/survey">online survey form</a>. 
+      Providing as much detail as possible at this stage increases the benefit of any forthcoming face to 
+      face interview. To find out more about what your LEAPS interview will involve, have a look at the 
+      <a href=" https://leapsonline.org/schoolstudents/s6-blog/leaps-11-interview">LEAPS S6 - Blog</a></p>
+      
+      <p>All data is collected and stored securely, and used only in accordance with our 
+      <a class="inline" href="/policy">data policy</a>.</p>
+    </div>
+
+    <div class="span4">
+  		<img src="/static/leaps_logo.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
+  		<a class="btn btn-primary btn-block" href="/survey">start the survey form</a>
+    </div>
+  </div>
 
 {% endblock %}
