--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -7,6 +7,11 @@
 	</div>
 
   <div class="row-fluid">
+    <div class="span4">
+  		<img src="/static/leaps_logo.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
+  		<a class="btn btn-primary" style="width:100%;" href="/survey">start the survey form</a>
+    </div>
+
     <div class="span8">
       <h2>Lothians Equal Access Programme for Schools</h2>
 
@@ -19,11 +24,6 @@
       
       <p>All data is collected and stored securely, and used only in accordance with our 
       <a class="inline" href="/policy">data policy</a>.</p>
-    </div>
-
-    <div class="span4">
-  		<img src="/static/leaps_logo.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
-  		<a class="btn btn-primary btn-block" href="/survey">start the survey form</a>
     </div>
   </div>
 
