--- a/portality/static/css/leaps.css
+++ b/portality/static/css/leaps.css
@@ -45,7 +45,7 @@ body {
 #container{
 	width:1000px;
 	margin:20px auto 50px auto;
-	padding:10px;
+	padding:0px 10px;
 	background:#ffffff;
     -moz-border-radius: 15px;
     border-radius: 15px;
