--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -8,8 +8,11 @@
 
   <div class="row-fluid">
     <div class="span4">
-  		<img src="/static/leaps_logo.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
-  		<a class="btn btn-primary" style="width:100%;" href="/survey">start the survey form</a>
+  		<img style="margin-left:10%; width:80%;" src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
+  		<a class="btn btn-primary" style="margin-left:10%; width:80%;" href="/survey">start the survey form</a>
+    </div>
+
+    <div class="span2">
     </div>
 
     <div class="span8">
