--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -8,14 +8,14 @@
 
   <div class="row-fluid">
     <div class="span4">
-  		<img style="margin-left:10%; width:80%;" src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
-  		<a class="btn btn-primary" style="margin-left:10%; width:80%;" href="/survey">start the survey form</a>
+  		<img style="width:100%;" src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
+  		<a class="btn btn-primary" style="width:100%;" href="/survey">start the survey form</a>
     </div>
 
     <div class="span2">
     </div>
 
-    <div class="span8">
+    <div class="span6">
       <h2>Lothians Equal Access Programme for Schools</h2>
 
       <p>We support talented young people in South East Scotland providing them with information and encouragement to apply to higher education. We work with schools in the region, targeting young people with little or no family experience of higher education or those who may have experienced adverse social and/or economic circumstances.</p>
