--- a/portality/templates/leaps/index.html
+++ b/portality/templates/leaps/index.html
@@ -8,11 +8,12 @@
 
   <div class="row-fluid">
     <div class="span4">
-  		<img style="width:100%;" src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
+  		<img style="width:100%; margin-bottom:50px;" src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
   		<a class="btn btn-primary" style="width:100%;" href="/survey">start the survey form</a>
     </div>
 
     <div class="span2">
+      <p></p>
     </div>
 
     <div class="span6">
