--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -340,6 +340,10 @@ input.bigfield{
 }*/
 </style>
 
+<div id="logo">
+    <img src="/static/leaps_banner.png" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
+</div>
+
 <div class="container">
 
 <form action="" id="survey" name="survey" method="post" data-validate="parsley">
