--- a/portality/templates/leaps/survey/closed.html
+++ b/portality/templates/leaps/survey/closed.html
@@ -3,6 +3,10 @@
 {% block content %}
 
 
+    <div id="logo">
+        <img src="/static/leaps_banner.png" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
+    </div>
+
 		<div id="content">
 
         <h2>Closed</h2>
