--- a/portality/templates/leaps/survey/intro.html
+++ b/portality/templates/leaps/survey/intro.html
@@ -2,30 +2,34 @@
 
 {% block content %}
 
-		<div class="row-fluid">
-		    <div class="span12">
+	<div id="logo">
+	    <img src="/static/leaps_banner.png" alt="A group of students from the Lothians Equal Access Programme for Schools" title="A group of students from the Lothians Equal Access Programme for Schools" />
+	</div>
 
-		        <p>This survey contains seven pages. You must complete every page in order to successfully save your responses. It should take no more than 30 minutes to complete.</p>
-		        <p>Please have details of your qualifications, relevant experience and possible University or College applications to hand before you start this survey.</p>
-		        <p><strong>Do not close your browser whilst completing the survey.</strong></p>
-		        <p>Only the students of <strong>participating schools</strong> can complete the survey. Schools are listed on the next page.</p>
-		        <p>Each section presents <strong>instructions at the top of the page</strong> on how to complete the questions in that section.</p> 
-		        <p>Subject fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
-		        continue to type and your text will be accepted.</p>
-		        <p>If you <strong>need to insert extra rows</strong> on a page, press <strong>ADD ANOTHER</strong> to get another row, up to the maximum of 6.</p>
-		        <p>You can navigate between sections using the <strong>PREVIOUS</strong> or <strong>NEXT</strong> buttons on each page.</p>
+	<div class="row-fluid">
+	    <div class="span12">
 
-            </div>
-		</div>
+	        <p>This survey contains seven pages. You must complete every page in order to successfully save your responses. It should take no more than 30 minutes to complete.</p>
+	        <p>Please have details of your qualifications, relevant experience and possible University or College applications to hand before you start this survey.</p>
+	        <p><strong>Do not close your browser whilst completing the survey.</strong></p>
+	        <p>Only the students of <strong>participating schools</strong> can complete the survey. Schools are listed on the next page.</p>
+	        <p>Each section presents <strong>instructions at the top of the page</strong> on how to complete the questions in that section.</p> 
+	        <p>Subject fields will offer <strong>suggestions as you type</strong>. Choose a suitable suggestion if one is presented, otherwise 
+	        continue to type and your text will be accepted.</p>
+	        <p>If you <strong>need to insert extra rows</strong> on a page, press <strong>ADD ANOTHER</strong> to get another row, up to the maximum of 6.</p>
+	        <p>You can navigate between sections using the <strong>PREVIOUS</strong> or <strong>NEXT</strong> buttons on each page.</p>
 
-        <div class="row-fluid" style="margin-top:30px;">
-            <div class="span6" style="text-align:center;">
-                <span>&nbsp;</span>
-            </div>
-            <div class="span6" style="text-align:center;">
-		        <a class="btn btn-primary span2" href="/survey/student">Next</a>
-            </div>
         </div>
+	</div>
+
+    <div class="row-fluid" style="margin-top:30px;">
+        <div class="span6" style="text-align:center;">
+            <span>&nbsp;</span>
+        </div>
+        <div class="span6" style="text-align:center;">
+	        <a class="btn btn-primary span2" href="/survey/student">Next</a>
+        </div>
+    </div>
 
 {% endblock %}
 
