--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -276,10 +276,10 @@ body {
 hr {
     border-color:#333;
 }
-#container {
+/*#container {
     margin:0;
-    /*width:100%;*/
-}
+    width:100%;
+}*/
 .content {
     margin:0;
     width:100%;
