--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -98,7 +98,7 @@ jQuery(document).ready(function() {
     //$('.next').bind('click',doprevnext);
     //$('.part').hide();
     //$('.part:first').show();
-    $('#survey').parsley('validate'); // validate to show warnings at start
+    //$('#survey').parsley('validate'); // validate to show warnings at start
 
     // review button show all
     var showall = function(event) {
