--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -839,16 +839,16 @@ input.bigfield{
 	</div>
 
 	<div class="row multi">
-	    <div class="col-md-4">
+	    <!--<div class="col-md-4">
             <p>Title</p>
     		<p><input class="form-control" type="text" name="interest_title"></p>
-    	</div>
-	    <div class="col-md-6">
+    	</div>-->
+	    <div class="col-md-9">
             <p>Brief Description</p>
 		    <!-- add data-required="true" to the following textarea to actually make the maxwords take effect -->
     		<p><textarea class="form-control" name="interest_brief_description" data-maxwords="200" data-trigger="keyup focusout change"></textarea></p>
     	</div>
-	    <div class="col-md-2">
+	    <div class="col-md-3">
 	    </div>
 	</div>
 
