--- a/portality/templates/footer.html
+++ b/portality/templates/footer.html
@@ -1,21 +1,23 @@
   <footer>
 	  <div class="row-fluid">
-	    <div class="span3">
+	    <div class="span3" id="footer_logo">
 	  		<img src="/static/leaps_logo_cropped.png" alt="Lothians Equal Access Programme for Schools Logo" title="Lothians Equal Access Programme for Schools Logo">
 	    </div>
 	
 	    <div class="span9">
 				<p>Lothians Equal Access Programme for Schools &middot; Room 1/06 Old Moray House &middot; Holyrood Road &middot; Edinburgh &middot; EH8 8AQ</p>
 				<p>
-				{% if current_user %}<a href="/account/policy">User Access Terms</a> | {% endif %}
-				<a href="/policy">Privacy policy</a> | 
-				<a href="/survey">Survey form</a> | 
-				<a href="/schools">Schools</a> | 
-				<a href="/universities">Universities</a> | 
-				<a href="http://leapsonline.org">leapsonline.org</a> | 
-				<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a> | 
-				<a href="http://www.leapsonline.org/contact-us">Contact us</a> | 
-				0131 650 4676
+					{% if current_user %}<a href="/account/policy">User Access Terms</a> | {% endif %}
+					<a href="/policy">Privacy policy</a> | 
+					<a href="/survey">Survey form</a> | 
+					<a href="/schools">Schools</a> | 
+					<a href="/universities">Universities</a>
+				</p>
+				<p>
+					<a href="http://leapsonline.org">leapsonline.org</a> | 
+					<a href="mailto:leaps@ed.ac.uk">LEAPS@ed.ac.uk</a> | 
+					<a href="http://www.leapsonline.org/contact-us">Contact us</a> | 
+					0131 650 4676
 				</p>
 	    </div>
 	   </div>
